<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wifi Picture Pusher</string>
    <string name="error_with_discovery_service">There was an error while discovering Wifi Picture Suckers on your network</string>
    <string name="done">Done</string>
    <string name="picture_activity_label">Pictures</string>
    <string name="main_activity_label">Connect to hosts</string>
    <string name="take_picture">Take Picture</string>
    <string name="settings">Settings</string>
    <string name="retry_send_on_failure">Retry On Failure</string>
    <string name="retry_send_on_failure_description">Check this if you want to periodically attempt to send pictures that failed to send successfully</string>
    <string name="accept">Accept</string>
    <string name="retry_send_on_failure_key">retry_send_on_failure</string>
    <string name="retry_interval_key">retry_interval</string>
    <string name="retry_interval">Retry Interval</string>
    <string name="retry_interval_description">How often you would like to attempt to retry failed uploads</string>
    <string name="interval_30_seconds">30 Seconds</string>
    <string name="interval_1_minute">1 Minute</string>
    <string name="interval_2_minutes">2 Minutes</string>
    <string name="interval_5_minutes">5 Minutes</string>
    <string name="interval_15_minutes">15 Minutes</string>
    <string name="interval_30_minutes">30 Minutes</string>
    <string name="interval_1_hour">1 Hour</string>
    <string name="retry_settings">Retry Settings</string>
    <string name="host_settings">Host Settings</string>
    <string name="change_hosts">Change Hosts</string>
    <string name="change_hosts_description">Manage which hosts should receive your pictures</string>
    <string name="reconfigure_hosts">reconfigure_hosts</string>
    <string name="camera_integration">Camera Integration</string>
    <string name="upload_pictures_from_camera_key">upload_pictures_from_camera</string>
    <string name="upload_pictures_from_camera">Upload Camera Pictures</string>
    <string name="upload_pictures_from_camera_description">Select this to have the app automatically upload pictures taken with the standard camera app</string>
    <string name="notifications">Notifications</string>
    <string name="show_notifications_on_success_key">show_notifications_on_success</string>
    <string name="show_notifications_on_success">Show notifications</string>
    <string name="show_notifications_on_success_description">Select this if you want to receive a notification when an image is uploaded from outside the app</string>
</resources>
