<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory android:title="@string/retry_settings">

      	<CheckBoxPreference android:key="retry_send_on_failure"
		    android:title="@string/retry_send_on_failure"
		    android:summary="@string/retry_send_on_failure_description" />
		
		<org.jesko.picture.pusher.settings.IntegerListPreference android:key="retry_interval"
		    android:title="@string/retry_interval"
		    android:summary="@string/retry_interval_description" 
		    android:defaultValue="60000"
		    android:entries="@array/retry_intervals"
		    android:entryValues="@array/retry_interval_values"
		    android:dependency="retry_send_on_failure" />
	
	</PreferenceCategory>
	
    <PreferenceCategory android:title="@string/camera_integration">
        
    	<CheckBoxPreference android:key="upload_pictures_from_camera"
		    android:title="@string/upload_pictures_from_camera"
		    android:summary="@string/upload_pictures_from_camera_description" />
    	
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/notifications">
        
    	<CheckBoxPreference android:key="show_notifications_on_success"
		    android:title="@string/show_notifications_on_success"
		    android:summary="@string/show_notifications_on_success_description" />
    	
    </PreferenceCategory>
	
    <PreferenceCategory android:title="@string/host_settings">
    	
    	<Preference android:title="@string/change_hosts"
    	    android:summary="@string/change_hosts_description">
    	    <intent android:action="android.intent.action.VIEW"
    	        android:targetPackage="org.jesko.picture.pusher"
    	        android:targetClass="org.jesko.picture.pusher.MainActivity_">
    	        <extra android:name="@string/reconfigure_hosts" android:value="true" />
   	        </intent>
    	</Preference>
    	
    </PreferenceCategory>
    
</PreferenceScreen>